# qt-kirigami-in-rust

./: .gitignore  .gitmodules  README.md
qt/: Cargo.toml  build.rs
qt/include/: QtApplication.h  QtQmlApplicationEngine.h
qt/src/: QtApplication.cpp  QtQmlApplicationEngine.cpp  lib.rs
rust/: Cargo.toml
rust/src/: main.rs
rust/ui/: main.qml
